--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,14 +4,16 @@ include(CTest)
 enable_testing()
 
 set(CMAKE_BUILD_TYPE Debug)
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall --std=c++17")
+set(CMAKE_CXX_STANDARD 11)
 
-find_package(OpenCV REQUIRED)
-include_directories(${OpenCV_INCLUDE_DIRS})
-set(EXTRA_LIBS ${EXTRA_LIBS} ${OpenCV_LIBS})
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall --std=c++11")
+
 add_definitions(-DLOGURU_REPLACE_GLOG)
+# find_package(GDAL CONFIG REQUIRED)
+# set(GDAL_DIR /path/to/gdal)
+
 find_package(GDAL REQUIRED)
+set(EXTRA_LIBS ${EXTRA_LIBS} GDAL::GDAL)
 
 include_directories(${PROJECT_SOURCE_DIR}/include)
 aux_source_directory(${PROJECT_SOURCE_DIR}/src DIR_SRCS)
@@ -19,7 +21,6 @@ aux_source_directory(${PROJECT_SOURCE_DIR}/src DIR_SRCS)
 add_executable(${CMAKE_PROJECT_NAME} ${DIR_SRCS})
 
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})
-set(EXTRA_LIBS ${EXTRA_LIBS} GDAL::GDAL)
 
 target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE ${EXTRA_LIBS} pthread dl)
 
